pictures are displaying

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+    <!-- action="/campgrounds/" method="POST" for post -->
+
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
@@ -25,7 +27,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="mini.html" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
+      <a href="main.html" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav">
@@ -44,12 +46,15 @@
   <div class="container">
     <div class="jumbotron">
       <h1><span class="glyphicon glyphicon-camera" arial-hidden="true">  </span> Welcome to Marco's Galllery </h1>
-      <p> THIS WEBSITE IS NOT FINISHED. </p>
+      <p> EBSITE IS NOT FINISHED. </p>
     </div>
+
+
+
     <div class="row">
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im1.html"><img src="images/pic1.jpg" /></a>
+           <img src="images/pic1.jpg"/> 
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
@@ -69,7 +74,7 @@
       </div>
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im5.html"><img src="images/IMG_1200.jpg" /></a>
+          <a href="im5.html">  <img src="images/IMG_1200.jpg" />  </a>
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
