the back end of the first pictures is connected

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -54,12 +54,13 @@
     <div class="row">
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-           <img src="images/pic1.jpg"/> 
+          <a href="/pic1">  <img src="images/pic1.jpg"/>    </a>
+             
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im2.html"><img src="images/pic2.jpg" /></a>
+          <a href="im2.html"> <img src="images/pic2.jpg" />  </a>
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
