--- a/views/main.ejs
+++ b/views/main.ejs
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="/pic1">  <img src="images/pic1.jpg"/>    </a>
+          <a href="/picture1">  <img src="images/pic1.jpg"/>    </a>
              
         </div>
       </div>
