all the routes have been set up

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -27,11 +27,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="main.html" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
+      <a href="/" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav">
-        <li><a href="about.html">About</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="https://www.instagram.com/marcom____/">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -60,27 +60,27 @@
       </div>
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im2.html"> <img src="images/pic2.jpg" />  </a>
+          <a href="/picture2"> <img src="images/pic2.jpg" />  </a>
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im3.html"><img src="images/IMG_0976.jpg" /></a>
+          <a href="/picture3"><img src="images/IMG_0976.jpg" /></a>
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im4.html"><img src="images/IMG_1078.jpg" /></a>
+          <a href="/picture4"><img src="images/IMG_1078.jpg" /></a>
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im5.html">  <img src="images/IMG_1200.jpg" />  </a>
+          <a href="/picture5">  <img src="images/IMG_1200.jpg" />  </a>
         </div>
       </div>
       <div class="col-lg-4 col-m col-sm-6">
         <div class="thumbnail">
-          <a href="im6.html"><img src="images/IMG_3857.jpg" /></a>
+          <a href="/picture6"><img src="images/IMG_3857.jpg" /></a>
         </div>
       </div>
 
