changes to my website

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -72,11 +72,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="mini.html" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
+      <a href="/" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav">
-        <li><a href="">About</a></li>
+        <li><a href="about">About</a></li>
         <li><a href="https://www.instagram.com/marcom____/">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -93,7 +93,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Who Am I?</h3>
-  <p>My name is Marco Mercado and I'm an amature Photographer. I made this website to post more pictures. It's also my way of getting started with Web-Development.</p>
+  <p>My name is Marco Mercado and I'm an amature Photographer. I made this website to post more pictures of my work. It's also my way of getting started with Web-Development.</p>
 </div>
 
 <!-- Third Container (Grid) -->
