--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
+  <title>Marco Mercado's Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -46,7 +46,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1><span class="glyphicon glyphicon-camera" arial-hidden="true">  </span> Welcome to Marco's Galllery </h1>
-      <p> EBSITE IS NOT FINISHED. </p>
+      <p> Website is currently under construction. </p>
     </div>
 
 
