--- a/views/pic1.ejs
+++ b/views/pic1.ejs
@@ -72,11 +72,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="main.html" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
+      <a href="/" class="navbar-brand"> <span class="glyphicon glyphicon-picture"></span></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav">
-        <li><a href="">About</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="https://www.instagram.com/marcom____/">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
